force-app/main/default/objects/Property_and_Assets__c/fields/Account_Owner_s__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_s__c</fullName>
    <label>Account Owner(s)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>