force-app/main/default/objects/Property_and_Assets__c/fields/Asset_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Asset_Reference_Number__c</fullName>
    <description>e.g., bank account number, vehicle VIN, etc.; string value</description>
    <inlineHelpText>Bank account number, VIN or license plate number, assessor&#39;s parcel number, etc.</inlineHelpText>
    <label>Asset Reference Number</label>
    <type>TextArea</type>
</CustomField>