force-app/main/default/objects/Property_and_Assets__c/fields/Date_Disposed_of__c.field-meta.xml
<CustomField>
    <fullName>Date_Disposed_of__c</fullName>
    <label>Date Disposed of</label>
    <type>Date</type>
</CustomField>