force-app/main/default/objects/Property_and_Assets__c/fields/Depreciation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Depreciation_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Depreciation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>