force-app/main/default/objects/Property_and_Assets__c/fields/Disposition_Type__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Type__c</fullName>
    <label>Disposition Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Destroyed/Lost</fullName>
            </value>
            <value>
                <fullName>Sold for Value</fullName>
            </value>
            <value>
                <fullName>Gift</fullName>
            </value>
            <value>
                <fullName>Fraudulent</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>