force-app/main/default/objects/Property_and_Assets__c/fields/Equity__c.field-meta.xml
<CustomField>
    <fullName>Equity__c</fullName>
    <description>Equity (currency) (default to calculation: Market Value-Encumbrances Value)</description>
    <inlineHelpText>Default to Market Value - Encumbrances Value</inlineHelpText>
    <label>Equity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>