force-app/main/default/objects/Property_and_Assets__c/fields/License_Plate_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Plate_Number__c</fullName>
    <formula>Account__r.Vehicle_License_Plate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Plate Number</label>
    <type>Text</type>
</CustomField>