force-app/main/default/objects/Property_and_Assets__c/fields/Located_At__c.field-meta.xml
<CustomField>
    <fullName>Located_At__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Located At</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Address__c.Entity__r.Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Garnishee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Property and Assets</relationshipLabel>
    <relationshipName>Property_and_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>