force-app/main/default/objects/Property_and_Assets__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <description>Employer&#39;s Auto information</description>
    <label>Make</label>
    <length>50</length>
    <type>Text</type>
</CustomField>