force-app/main/default/objects/Property_and_Assets__c/fields/Market_Value__c.field-meta.xml
<CustomField>
    <fullName>Market_Value__c</fullName>
    <description>should default to Purchase Price minus depreciation field value, if nothing else entered</description>
    <inlineHelpText>Default to Purchase Price - Depreciation Amount</inlineHelpText>
    <label>Market Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>