force-app/main/default/objects/Property_and_Assets__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>Employer&#39;s auto information</description>
    <label>Model</label>
    <length>20</length>
    <type>Text</type>
</CustomField>