force-app/main/default/objects/Property_and_Assets__c/fields/Name_of_Payor__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Payor__c</fullName>
    <label>Name of Payor</label>
    <length>20</length>
    <type>Text</type>
</CustomField>