force-app/main/default/objects/Property_and_Assets__c/fields/Property_Description__c.field-meta.xml
<CustomField>
    <fullName>Property_Description__c</fullName>
    <label>Property Description</label>
    <type>TextArea</type>
</CustomField>