force-app/main/default/objects/Property_and_Assets__c/fields/Registered_Owner_s__c.field-meta.xml
<CustomField>
    <fullName>Registered_Owner_s__c</fullName>
    <label>Registered Owner(s)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>