force-app/main/default/objects/Property_and_Assets__c/recordTypes/Annuities_Insurance.recordType-meta.xml
<RecordType>
    <fullName>Annuities_Insurance</fullName>
    <active>true</active>
    <label>Annuities &amp; Insurance</label>
</RecordType>