force-app/main/default/objects/Property_and_Assets__c/recordTypes/Equipment.recordType-meta.xml
<RecordType>
    <fullName>Equipment</fullName>
    <active>true</active>
    <label>Equipment</label>
</RecordType>