force-app/main/default/objects/Property_and_Assets__c/recordTypes/Farm_Products_Animals_Mineral_Rights.recordType-meta.xml
<RecordType>
    <fullName>Farm_Products_Animals_Mineral_Rights</fullName>
    <active>true</active>
    <label>Farm Products Animals &amp; Mineral Rights</label>
</RecordType>