force-app/main/default/objects/Property_and_Assets__c/recordTypes/Intellectual_Property.recordType-meta.xml
<RecordType>
    <fullName>Intellectual_Property</fullName>
    <active>true</active>
    <label>Intellectual Property</label>
</RecordType>