force-app/main/default/objects/Property_and_Assets__c/recordTypes/Jewelry_Artworks_Collectables.recordType-meta.xml
<RecordType>
    <fullName>Jewelry_Artworks_Collectables</fullName>
    <active>true</active>
    <label>Jewelry Artworks &amp; Collectables</label>
</RecordType>