force-app/main/default/objects/Property_and_Assets__c/recordTypes/Liquor_Licence_or_Other_Gov_t_Franchise.recordType-meta.xml
<RecordType>
    <fullName>Liquor_Licence_or_Other_Gov_t_Franchise</fullName>
    <active>true</active>
    <label>Liquor Licence or Other Gov&#39;t Franchise</label>
</RecordType>