force-app/main/default/objects/Property_and_Assets__c/recordTypes/Rent_Royalty_Payments.recordType-meta.xml
<RecordType>
    <fullName>Rent_Royalty_Payments</fullName>
    <active>true</active>
    <label>Rent/Royalty Payments</label>
</RecordType>