force-app/main/default/objects/Property_and_Assets__c/recordTypes/Sales_Business_Receipts.recordType-meta.xml
<RecordType>
    <fullName>Sales_Business_Receipts</fullName>
    <active>true</active>
    <label>Sales/Business Receipts</label>
</RecordType>