force-app/main/default/objects/Property_and_Assets__c/recordTypes/Stocks_Partnership_Interests.recordType-meta.xml
<RecordType>
    <fullName>Stocks_Partnership_Interests</fullName>
    <active>true</active>
    <label>Stocks/Partnership Interests</label>
</RecordType>